--- a/client/callToAction.css
+++ b/client/callToAction.css
@@ -1,3 +1,11 @@
+body{
+  height: 100vh;
+  width: 100vw;
+}
+.thanks{
+  color: green;
+  font-size: small;
+}
 .pname {
     display: none;
     color: red;
